--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3 style="text-align: center">Project user: czarinaroque_q1gfa1</h5>
         </div>
         <div style="text-align: center;">
-        <a style="color:white;">GitHub Project Link</a>
+        <a style="color:white;" href="https://github.com/czaroque/czarinaroque_q1gfa1.git">GitHub Project Link</a>
         <a style="color: white;" href="aboutme.html">About Me</a>
         </div>
         <hr>
